<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/product_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_android_logo" />

    <TextView
        android:id="@+id/image_help"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/product_image"
        android:gravity="center_horizontal"
        android:text="@string/image_help" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image_help"
        android:orientation="vertical"
        android:padding="@dimen/activity_margin">

        <!-- Name field -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_name" />

            <EditText
                android:id="@+id/edit_product_name"
                style="@style/EditorFieldStyle"
                android:layout_weight="2"
                android:hint="@string/hint_product_name"
                android:inputType="textCapWords" />
        </LinearLayout>

        <!-- Price field -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_price" />

            <EditText
                android:id="@+id/edit_price"
                style="@style/EditorFieldStyle"
                android:layout_weight="2"
                android:hint="@string/hint_price"
                android:inputType="number" />
        </LinearLayout>

        <!-- Quantity field -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_quantity" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/subtract_quantity"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/subtract_quantity" />

                <EditText
                    android:id="@+id/edit_quantity"
                    style="@style/EditorFieldStyle"
                    android:layout_width="wrap_content"
                    android:layout_gravity="bottom"
                    android:hint="@string/hint_quantity"
                    android:inputType="number" />

                <Button
                    android:id="@+id/add_quantity"
                    android:layout_width="40dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/add_quantity" />

            </LinearLayout>

        </LinearLayout>

        <!-- Supplier field -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_supplier" />

            <EditText
                android:id="@+id/edit_supplier"
                style="@style/EditorFieldStyle"
                android:layout_weight="2"
                android:hint="@string/hint_supplier"
                android:inputType="textCapWords" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
